test/parser.d/invalid/typedef-struct-0.surc.bad
def struct IntWrapper = int_wrapper(unwrap: Int)
